src/gallium/auxiliary/gallivm/lp_bld_debug.cpp
@@ -39,7 +39,11 @@
 
 #include <llvm/Support/Host.h>
 
+#if HAVE_LLVM >= 0x0303
 #include <llvm/IR/Module.h>
+#else
+#include <llvm/Module.h>
+#endif
 
 #include <llvm/MC/MCDisassembler.h>
 #include <llvm/MC/MCAsmInfo.h>
